--- a/css/styles.css
+++ b/css/styles.css
@@ -161,9 +161,12 @@ button {
     padding-top: 24px;
     padding-bottom: 31px;
 
-    /* color: #2e2f42;
-    text-decoration: none;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-link:hover, 
+.header-link:focus {
+    color: var(--hover-focus-color);
 }
 
 .active {
@@ -185,21 +188,13 @@ button {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
-.header-link:hover, 
-.header-link:focus {
-    color: var(--hover-focus-color);
-}
-
-/* .header-link:hover::after {
-    opacity:100%;
-  } */
-
-
 .header-mailto {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;    
     color: var(--text-contacts-color);
+
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-mailto:hover,
@@ -212,6 +207,8 @@ button {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--text-contacts-color);
+
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-tel:hover,
@@ -269,6 +266,9 @@ button {
     border: 1px solid var(--logo-btn-color);
     padding: 16px 32px;
     cursor: pointer;
+
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
@@ -417,6 +417,7 @@ button {
     justify-content: center;
     align-items: center;
     background-color: var(--logo-btn-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -456,16 +457,22 @@ button {
     color: #8E8F99;
     padding-top: 15px;
     padding-bottom: 15px;
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-text-icon {
-    fill: currentColor;
+    fill: #afb1b8;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-text-link:is(:hover, :focus) {
     border-color: var(--hover-focus-color);
     color: var(--hover-focus-color);
+}
 
+.customers-text-link:is(:hover, :focus) .customers-text-icon {
+    fill: var(--hover-focus-color);
 }
 
 /*----PORTFOLIO---*/
@@ -498,14 +505,23 @@ button {
     padding: 11px 23px;
     border: 1px solid var(--border-text-color);
     border-radius: 4px;
+
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+        color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .portfolio-btn:hover, 
 .portfolio-btn:focus {
     background: var(--hover-focus-color);
     color: var(--white-color);
     border: 1px solid var(--hover-focus-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 
+    0px 2px 1px rgba(0, 0, 0, 0.08), 
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+    cursor: pointer;
 }
 
 .portfolio-list-example {
@@ -520,7 +536,24 @@ button {
     display: flex;
     flex-direction: column;
     background: var(--white-color);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+    /* box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08); */
+
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item-example:hover,
+.portfolio-item-example:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+/* .portfolio-item-example:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
+    0px 1px 1px rgba(46, 47, 66, 0.16), 
+    0px 2px 1px rgba(46, 47, 66, 0.08);
+} */
+
+.portfolio-item-example:hover .portfolio-cover-text {
+    transform: translateY(0);
 }
 
 .portfolio-cover-wrap {
@@ -549,7 +582,7 @@ button {
     background-color: #4D5AE5;
     height: 100%;
     transform: translateY(100%);
-    transition: transform 300ms linear;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-cover {
@@ -565,13 +598,6 @@ button {
             transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item-example:hover {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-.portfolio-item-example:hover .portfolio-cover-text {
-    transform: translateY(0);
-}
 
 .portfolio-item-photo {
     display: block;
@@ -673,12 +699,6 @@ border-bottom: 1px solid var(--border-text-color);
     background-position: center;
 }
 
-.footer-link:hover,
-.footer-link:focus {
-    background-color: #31D0AA;
-    cursor: pointer;
-}
-
 .footer-link {
     display: flex;
     width: 100%;
@@ -688,6 +708,15 @@ border-bottom: 1px solid var(--border-text-color);
     border: none;
     justify-content: center;
     align-items: center;
+
+    background-color: rgba(255, 255, 255, 0.1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+.footer-link:hover,
+.footer-link:focus {
+    background-color: #31D0AA;
+    cursor: pointer;
 }
 
 .footer-icon {
