--- a/css/styles.css
+++ b/css/styles.css
@@ -779,6 +779,8 @@ border-bottom: 1px solid var(--border-text-color);
     border-radius: 50%;
     background: #E7E9FC;
     border: 1px solid rgba(0, 0, 0, 0.1); */
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close:hover,
